--- a/src/styles/pages/Contact.css
+++ b/src/styles/pages/Contact.css
@@ -58,15 +58,16 @@
 @media only screen and (max-width: 768px) {
   .main-contact {
     padding: 0 2rem;
+    min-height: 400px;
   }
 
   .contact-subtitle {
     width: 100%;
+    margin-top: 50px;
   }
 
   .contact-subtitle-image {
-    max-width: 150px;
-    padding-top: 5rem;
+    max-width: 100px;
   }
 
   
